--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
-obj/LibraryApp.csproj.nuget.dgspec.json
-obj/LibraryApp.csproj.nuget.g.props
-obj/LibraryApp.csproj.nuget.g.targets
-obj/project.assets.json
-obj/project.nuget.cache
-obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
-obj/Debug/netcoreapp3.1/LibraryApp.AssemblyInfo.cs
-obj/Debug/netcoreapp3.1/LibraryApp.AssemblyInfoInputs.cache
-obj/Debug/netcoreapp3.1/LibraryApp.assets.cache
-obj/Debug/netcoreapp3.1/LibraryApp.csprojAssemblyReference.cache
-obj/Debug/netcoreapp3.1/LibraryApp.RazorAssemblyInfo.cache
-obj/Debug/netcoreapp3.1/LibraryApp.RazorAssemblyInfo.cs
-obj/Debug/netcoreapp3.1/project.razor.json
+/obj
+/bin
+/.vs
