Add and setup braintreeGateway

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "braintreeGateway": {
+    "__url": "https://sandbox.braintreegateway.com/merchants/w4d3hcxqj3942jwx/home",
+    
+    "environment": "SANDBOX",
+    "merchantId": "xxxx",
+    "publicKey": "xxxx",
+    "privateKey": "xxxx"
+  }
 }
