added Stripe payment gateway

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,12 +7,18 @@
     }
   },
   "AllowedHosts": "*",
-  "braintreeGateway": {
+  "BraintreeGateway": {
     "__url": "https://sandbox.braintreegateway.com/merchants/w4d3hcxqj3942jwx/home",
-    
+
     "environment": "SANDBOX",
     "merchantId": "xxxx",
     "publicKey": "xxxx",
     "privateKey": "xxxx"
+  },
+  "StripeGateway": {
+    "__url": "https://dashboard.stripe.com/test/apikeys",
+
+    "PublishableKey": "pk_test_xxxx",
+    "SecretKey": "sk_test_xxxx"
   }
 }
